--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "NativebaseKitchenSink",
+  "author": "https://www.linkedin.com/in/wahyu-fatur-rizky",
   "version": "2.12.0",
   "private": true,
   "devDependencies": {
